--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Acme-Prereq-E
 
+0.02    Date/time
+        Another version 
+
 0.01    Date/time
         First version, released on an unsuspecting world.
 
