--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Acme-Prereq-E
 
+0.03    Date/time
+        A (soon) problematic version
+
 0.02    Date/time
         Another version 
 
