--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Acme-Prereq-Regress
 
+4.00    Date/time
+        Second version, continuing with a lower version number
+
 5.00    Date/time
         First version, starting with very high version number
 
