--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Acme-Prereq-Regress
 
+3.00    Date/time
+        Third version, continuing with another lower version number
+
 4.00    Date/time
         Second version, continuing with a lower version number
 
