--- a/Changes
+++ b/Changes
@@ -1,10 +1,4 @@
-Revision history for Acme-Prereq-Regress
-
-3.00    Date/time
-        Third version, continuing with another lower version number
-
-4.00    Date/time
-        Second version, continuing with a lower version number
+Revision history for Acme-Version-Regress
 
 5.00    Date/time
         First version, starting with very high version number
